{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 68,
  "lineage": "3ed42401-2bdf-1637-c793-4537bbb66e5b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pluto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:internet-gateway/igw-0edb0df8c6ca0fe4d",
            "id": "igw-0edb0df8c6ca0fe4d",
            "owner_id": "066683141917",
            "tags": {
              "Name": "pluto-igw"
            },
            "tags_all": {
              "Name": "pluto-igw"
            },
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pluto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "pluto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:066683141917:loadbalancer/net/pluto-nlb/1a004853cdf33ba2",
            "arn_suffix": "net/pluto-nlb/1a004853cdf33ba2",
            "dns_name": "pluto-nlb-1a004853cdf33ba2.elb.ca-central-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:066683141917:loadbalancer/net/pluto-nlb/1a004853cdf33ba2",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "pluto-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-088f8672f85ccd968"
              },
              {
                "subnet_id": "subnet-0bc39f31c6756ca1f"
              }
            ],
            "subnets": [
              "subnet-088f8672f85ccd968",
              "subnet-0bc39f31c6756ca1f"
            ],
            "tags": {
              "Name": "pluto-nlb"
            },
            "tags_all": {
              "Name": "pluto-nlb"
            },
            "vpc_id": "vpc-074ebab203bf43375",
            "zone_id": "Z2EPGBW3API2WT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:066683141917:listener/net/pluto-nlb/1a004853cdf33ba2/30874a885c277360",
            "certificate_arn": "arn:aws:acm:ca-central-1:066683141917:certificate/57b1eeb9-3eea-43df-837f-29e93da34eee",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:066683141917:targetgroup/pluto-traefik/917f2dfa385463fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:066683141917:listener/net/pluto-nlb/1a004853cdf33ba2/30874a885c277360",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:066683141917:loadbalancer/net/pluto-nlb/1a004853cdf33ba2",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "TLS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.pluto",
            "aws_acm_certificate_validation.pluto",
            "aws_lb.pluto",
            "aws_lb_target_group.traefik",
            "aws_route53_record.cert_validation",
            "aws_subnet.public",
            "aws_vpc.pluto",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "traefik",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:066683141917:targetgroup/pluto-traefik/917f2dfa385463fb",
            "arn_suffix": "targetgroup/pluto-traefik/917f2dfa385463fb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:066683141917:targetgroup/pluto-traefik/917f2dfa385463fb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pluto-traefik",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pluto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:route-table/rtb-0f2f56e53e579af81",
            "id": "rtb-0f2f56e53e579af81",
            "owner_id": "066683141917",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pluto-private-rt"
            },
            "tags_all": {
              "Name": "pluto-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pluto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:route-table/rtb-00a1185249932728d",
            "id": "rtb-00a1185249932728d",
            "owner_id": "066683141917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0edb0df8c6ca0fe4d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pluto-public-rt"
            },
            "tags_all": {
              "Name": "pluto-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pluto",
            "aws_vpc.pluto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08516c4635b37fa77",
            "route_table_id": "rtb-0f2f56e53e579af81",
            "subnet_id": "subnet-0df2409cbc4022baf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb60990c80b0e09b",
            "route_table_id": "rtb-0f2f56e53e579af81",
            "subnet_id": "subnet-03c82650975ddbfad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b21eba42297a9f86",
            "route_table_id": "rtb-00a1185249932728d",
            "subnet_id": "subnet-0bc39f31c6756ca1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pluto",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a76b8d11ac7efdcc",
            "route_table_id": "rtb-00a1185249932728d",
            "subnet_id": "subnet-088f8672f85ccd968"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pluto",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:security-group/sg-01ff4d9388f879b1f",
            "description": "ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ff4d9388f879b1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "Traefik entrypoint",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pluto-ecs",
            "name_prefix": "",
            "owner_id": "066683141917",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pluto-ecs-sg"
            },
            "tags_all": {
              "Name": "pluto-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pluto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:security-group/sg-05eeaea721d64d1e4",
            "description": "EFS access from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05eeaea721d64d1e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ff4d9388f879b1f"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "pluto-efs",
            "name_prefix": "",
            "owner_id": "066683141917",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pluto-efs-sg"
            },
            "tags_all": {
              "Name": "pluto-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs",
            "aws_vpc.pluto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:security-group/sg-0977e28f692c314ae",
            "description": "Postgres access from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0977e28f692c314ae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ff4d9388f879b1f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pluto-rds",
            "name_prefix": "",
            "owner_id": "066683141917",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pluto-rds-sg"
            },
            "tags_all": {
              "Name": "pluto-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs",
            "aws_vpc.pluto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:subnet/subnet-0df2409cbc4022baf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.20.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df2409cbc4022baf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "066683141917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pluto-private-1"
            },
            "tags_all": {
              "Name": "pluto-private-1"
            },
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:subnet/subnet-03c82650975ddbfad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.20.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c82650975ddbfad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "066683141917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pluto-private-2"
            },
            "tags_all": {
              "Name": "pluto-private-2"
            },
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:subnet/subnet-0bc39f31c6756ca1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc39f31c6756ca1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "066683141917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pluto-public-1"
            },
            "tags_all": {
              "Name": "pluto-public-1"
            },
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:subnet/subnet-088f8672f85ccd968",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.20.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088f8672f85ccd968",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "066683141917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pluto-public-2"
            },
            "tags_all": {
              "Name": "pluto-public-2"
            },
            "vpc_id": "vpc-074ebab203bf43375"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pluto",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pluto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:066683141917:vpc/vpc-074ebab203bf43375",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0a4178e2f2958ccca",
            "default_route_table_id": "rtb-0556d237b4ba9127b",
            "default_security_group_id": "sg-04e1959dfe2a0dbac",
            "dhcp_options_id": "dopt-053fa713f9b7db553",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074ebab203bf43375",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0556d237b4ba9127b",
            "owner_id": "066683141917",
            "tags": {
              "Name": "pluto-vpc"
            },
            "tags_all": {
              "Name": "pluto-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}